# clone

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
crates/clone-init/: Cargo.toml
crates/clone-init/src/: main.rs
crates/guest-agent/: Cargo.toml
crates/guest-agent/src/: main.rs
docs/: SPEC.md
scripts/: make_initrd.sh
src/: main.rs  rootfs.rs  rootfs_create.rs
src/boot/: acpi.rs  identity.rs  measured.rs  mod.rs  template.rs
src/control/: daemon.rs  jailer.rs  metrics.rs  mod.rs  protocol.rs  sync_server.rs
src/memory/: balloon.rs  mod.rs  overcommit.rs
src/migration/: mod.rs
src/net/: mod.rs
src/pci/: mod.rs  vfio.rs
src/storage/: mod.rs  qcow2.rs
src/virtio/: balloon.rs  block.rs  fs.rs  mmio.rs  mod.rs  net.rs  queue.rs  vsock.rs
src/vmm/: agent_listener.rs  mod.rs  serial.rs  vcpu.rs
tests/e2e/: README.md  debug_incr.py  lib.sh  run_all.sh
