[package]
name = "clone"
version = "0.1.0"
edition = "2021"
description = "Minimal VMM for multi-tenant dev shells and serverless"
license = "BUSL-1.1"
authors = ["Unix Shells Limited Company"]

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }

# error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# unix
libc = "0.2"

# cryptography — cross-platform
sha2 = "0.10"

# rust-vmm crates — Linux only (KVM)
[target.'cfg(target_os = "linux")'.dependencies]
kvm-ioctls = "0.19"
kvm-bindings = { version = "0.10", features = ["fam-wrappers"] }
vm-memory = { version = "0.16", features = ["backend-mmap"] }
linux-loader = { version = "0.13", features = ["bzimage", "elf"] }
virtio-queue = "0.14"
nix = { version = "0.29", features = ["fs", "ioctl", "mman", "net", "signal", "socket"] }
io-uring = { version = "0.7", optional = true }

[workspace]
members = [
    ".",
    "crates/guest-agent",
    "crates/clone-init",
]

[features]
default = []
io_uring = ["io-uring"]

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "clone"
path = "src/main.rs"
